spring-error-usage/src/main/java/com/example/error/servlet/MetricsService.java
package com.example.error.servlet;

import org.springframework.beans.factory.annotation.Autowired;
import org.springframework.beans.factory.annotation.Qualifier;
import org.springframework.boot.web.servlet.FilterRegistrationBean;
import org.springframework.stereotype.Service;


@Service
public class MetricsService {

//    @Autowired
//    @Qualifier("com.example.error.servlet.TimeCostFilter")
//    public FilterRegistrationBean timeCostFilter;
    //省略其他非关键代码

}